# rust-serialization-evaluation

./: .gitignore  Cargo.toml
src/: lib.rs  rustc_serialize_traits.rs  serde_traits.rs  types.rs
